--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -20,7 +20,8 @@
 
 .counters {
 	display: flex;
-	justify-content: center;
+	width: 100%;
+	justify-content: space-evenly;
 	align-items: center;
 	flex-direction: row;
 	flex-wrap: wrap;
