--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -28,6 +28,12 @@
 	font-size: 32px;
 	font-weight: 900;
 	color: #015aff;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .links {
